--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://root@127.0.0.1:3306/wordlesolver?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://root@127.0.0.1:3306/wordlesolver?serverVersion=mariadb-10.4.17&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
