--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "kioskboard": "^2.1.0",
+        "simple-keyboard": "^3.4.78"
     }
 }
