--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,12 @@ yarn-error.log
 *.env.*
 yarn.lock
 package-lock.json
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
